Fix invisible export buttons (#26)

--- a/src/index.scss
+++ b/src/index.scss
@@ -274,6 +274,12 @@ td {
 		background-color: rgb(55, 55, 55) !important;
 	}
 
+	.ant-dropdown-menu {
+		.ds-text {
+			color: rgba(0, 0, 0, 0.88);
+		}
+	}
+
 	.ant-popover {
 		.ant-popover-arrow:after,
 		.ant-popover-inner {
